@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/13/13
+    - Empty 'got' and 'expected' arguments to t_is() now
+      count as a passing test instead of an error, as long as
+      the dimensions match.
+
 2/12/13
     - Fixed bug causing value of opt.verbose to be ignored in
       qps_gurobi().
